[gd_scene load_steps=8 format=2]

[ext_resource path="res://CellularAutomata/03.DungeonGenerator/Props/Exit.tscn" type="PackedScene" id=1]
[ext_resource path="res://CellularAutomata/03.DungeonGenerator/Props/Treasure.tscn" type="PackedScene" id=2]
[ext_resource path="res://CellularAutomata/03.DungeonGenerator/Miner/Miner.tscn" type="PackedScene" id=3]
[ext_resource path="res://CellularAutomata/03.DungeonGenerator/tileset_advanced.tres" type="TileSet" id=4]
[ext_resource path="res://CellularAutomata/03.DungeonGenerator/ButtonCameraSwitch.gd" type="Script" id=5]
[ext_resource path="res://CellularAutomata/03.DungeonGenerator/UISettingsAdvanced.gd" type="Script" id=6]
[ext_resource path="res://CellularAutomata/03.DungeonGenerator/CellularDungeonGenerator.gd" type="Script" id=7]

[node name="CellularDungeonGenerator" type="Node2D"]
script = ExtResource( 7 )
treasure_scene = ExtResource( 2 )

[node name="TileMapDungeon" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
format = 1

[node name="CameraDungeon" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2( 4, 4 )

[node name="Miner" parent="." instance=ExtResource( 3 )]
z_index = 1

[node name="CameraPlayer" type="Camera2D" parent="Miner"]
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Exit" parent="." instance=ExtResource( 1 )]
position = Vector2( 115.221, -2.63617 )
z_index = 1
monitoring = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UISettings" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/UISettings"]
margin_top = 521.0
margin_right = 540.0
margin_bottom = 721.0
color = Color( 0, 0, 0, 0.258824 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonGenerate" type="Button" parent="CanvasLayer/UISettings"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -880.0
margin_top = -70.7906
margin_right = -750.0
margin_bottom = -5.79071
focus_mode = 0
enabled_focus_mode = 0
text = "Generate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCameraSwitch" type="Button" parent="CanvasLayer/UISettings"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -880.0
margin_top = -112.791
margin_right = -750.0
margin_bottom = -82.7908
focus_mode = 0
enabled_focus_mode = 0
text = "Switch Camera"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
camera_one_path = NodePath("../../../CameraDungeon")
camera_two_path = NodePath("../../../Miner/CameraPlayer")

[node name="MinimumCavernArea" type="HBoxContainer" parent="CanvasLayer/UISettings"]
margin_left = 8.0
margin_top = 547.996
margin_right = 400.0
margin_bottom = 567.996
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="CanvasLayer/UISettings/MinimumCavernArea"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
rect_min_size = Vector2( 132, 0 )
hint_tooltip = "The chance a cell initially spawns as a wall tile."
mouse_filter = 1
text = "Min Cavern Size"

[node name="SliderMinimumCavernArea" type="HSlider" parent="CanvasLayer/UISettings/MinimumCavernArea" groups=[
"slider",
]]
margin_left = 136.0
margin_right = 356.0
margin_bottom = 20.0
rect_min_size = Vector2( 220, 0 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 200.0
value = 50.0

[node name="Value" type="Label" parent="CanvasLayer/UISettings/MinimumCavernArea"]
margin_left = 360.0
margin_top = 3.0
margin_right = 392.0
margin_bottom = 17.0
rect_min_size = Vector2( 32, 0 )
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinimumExitDistance" type="HBoxContainer" parent="CanvasLayer/UISettings"]
margin_left = 8.0
margin_top = 527.996
margin_right = 400.0
margin_bottom = 547.996
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="CanvasLayer/UISettings/MinimumExitDistance"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
rect_min_size = Vector2( 132, 0 )
hint_tooltip = "The chance a cell initially spawns as a wall tile."
mouse_filter = 1
text = "Min Exit Distance"

[node name="SliderMinimumExitDistance" type="HSlider" parent="CanvasLayer/UISettings/MinimumExitDistance" groups=[
"slider",
]]
margin_left = 136.0
margin_right = 356.0
margin_bottom = 20.0
rect_min_size = Vector2( 220, 0 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 50.0
value = 10.0

[node name="Value" type="Label" parent="CanvasLayer/UISettings/MinimumExitDistance"]
margin_left = 360.0
margin_top = 3.0
margin_right = 392.0
margin_bottom = 17.0
rect_min_size = Vector2( 32, 0 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaximumTreasure" type="HBoxContainer" parent="CanvasLayer/UISettings"]
margin_left = 8.0
margin_top = 567.088
margin_right = 400.0
margin_bottom = 587.088
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="CanvasLayer/UISettings/MaximumTreasure"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
rect_min_size = Vector2( 132, 0 )
hint_tooltip = "The chance a cell initially spawns as a wall tile."
mouse_filter = 1
text = "Maximum Treasure"

[node name="SliderMaximumTreasure" type="HSlider" parent="CanvasLayer/UISettings/MaximumTreasure" groups=[
"slider",
]]
margin_left = 136.0
margin_right = 356.0
margin_bottom = 20.0
rect_min_size = Vector2( 220, 0 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 50.0
value = 10.0

[node name="Value" type="Label" parent="CanvasLayer/UISettings/MaximumTreasure"]
margin_left = 360.0
margin_top = 3.0
margin_right = 392.0
margin_bottom = 17.0
rect_min_size = Vector2( 32, 0 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WallChance" type="HBoxContainer" parent="CanvasLayer/UISettings"]
margin_left = 8.0
margin_top = 600.0
margin_right = 400.0
margin_bottom = 620.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="CanvasLayer/UISettings/WallChance"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
rect_min_size = Vector2( 132, 0 )
hint_tooltip = "The chance a cell initially spawns as a wall tile."
mouse_filter = 1
text = "Wall Chance"

[node name="SliderWallChance" type="HSlider" parent="CanvasLayer/UISettings/WallChance" groups=[
"slider",
]]
margin_left = 136.0
margin_right = 356.0
margin_bottom = 20.0
rect_min_size = Vector2( 220, 0 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.5

[node name="Value" type="Label" parent="CanvasLayer/UISettings/WallChance"]
margin_left = 360.0
margin_top = 3.0
margin_right = 392.0
margin_bottom = 17.0
rect_min_size = Vector2( 32, 0 )
text = "0.5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WallConversion" type="HBoxContainer" parent="CanvasLayer/UISettings"]
margin_left = 8.0
margin_top = 620.0
margin_right = 400.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="CanvasLayer/UISettings/WallConversion"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
rect_min_size = Vector2( 132, 0 )
hint_tooltip = "Each step, a floor cell turns into a wall if it has less than this number of floor neighbors."
mouse_filter = 1
text = "Wall Conversion"

[node name="SliderWallConversion" type="HSlider" parent="CanvasLayer/UISettings/WallConversion" groups=[
"slider",
]]
margin_left = 136.0
margin_right = 356.0
margin_bottom = 20.0
rect_min_size = Vector2( 220, 0 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 8.0
value = 4.0

[node name="Value" type="Label" parent="CanvasLayer/UISettings/WallConversion"]
margin_left = 360.0
margin_top = 3.0
margin_right = 392.0
margin_bottom = 17.0
rect_min_size = Vector2( 32, 0 )
text = "< 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorConversion" type="HBoxContainer" parent="CanvasLayer/UISettings"]
margin_left = 8.0
margin_top = 640.0
margin_right = 400.0
margin_bottom = 660.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="CanvasLayer/UISettings/FloorConversion"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
rect_min_size = Vector2( 132, 0 )
hint_tooltip = "Each step, a wall cell turns into a floor if it has greater than this number of floor neighbors."
mouse_filter = 1
text = "Floor Conversion"

[node name="SliderFloorConversion" type="HSlider" parent="CanvasLayer/UISettings/FloorConversion" groups=[
"slider",
]]
margin_left = 136.0
margin_right = 356.0
margin_bottom = 20.0
rect_min_size = Vector2( 220, 0 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 8.0
value = 4.0

[node name="Value" type="Label" parent="CanvasLayer/UISettings/FloorConversion"]
margin_left = 360.0
margin_top = 3.0
margin_right = 392.0
margin_bottom = 17.0
rect_min_size = Vector2( 32, 0 )
text = "> 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepCount" type="HBoxContainer" parent="CanvasLayer/UISettings"]
margin_left = 8.0
margin_top = 680.0
margin_right = 400.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="CanvasLayer/UISettings/StepCount"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
rect_min_size = Vector2( 132, 0 )
text = "Step Count"

[node name="SliderStepCount" type="HSlider" parent="CanvasLayer/UISettings/StepCount" groups=[
"slider",
]]
margin_left = 136.0
margin_right = 356.0
margin_bottom = 20.0
rect_min_size = Vector2( 220, 0 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 20.0
value = 10.0

[node name="Value" type="Label" parent="CanvasLayer/UISettings/StepCount"]
margin_left = 360.0
margin_top = 3.0
margin_right = 392.0
margin_bottom = 17.0
rect_min_size = Vector2( 32, 0 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepSpeed" type="HBoxContainer" parent="CanvasLayer/UISettings"]
margin_left = 8.0
margin_top = 700.0
margin_right = 400.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="CanvasLayer/UISettings/StepSpeed"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
rect_min_size = Vector2( 132, 0 )
text = "Step Time"

[node name="SliderStepSpeed" type="HSlider" parent="CanvasLayer/UISettings/StepSpeed" groups=[
"slider",
]]
margin_left = 136.0
margin_right = 356.0
margin_bottom = 20.0
rect_min_size = Vector2( 220, 0 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 0.5
step = 0.1
value = 0.1

[node name="Value" type="Label" parent="CanvasLayer/UISettings/StepSpeed"]
margin_left = 360.0
margin_top = 3.0
margin_right = 392.0
margin_bottom = 17.0
rect_min_size = Vector2( 32, 0 )
text = "0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="drill_used" from="Miner" to="." method="remove_walls"]
[connection signal="miner_entered" from="Exit" to="." method="generate_new_dungeon"]
[connection signal="floor_conversion_changed" from="CanvasLayer/UISettings" to="." method="set_floor_conversion"]
[connection signal="maximum_treasure_changed" from="CanvasLayer/UISettings" to="." method="set_maximum_treasure"]
[connection signal="min_cavern_area_changed" from="CanvasLayer/UISettings" to="." method="set_minimum_cavern_area"]
[connection signal="min_exit_distance_changed" from="CanvasLayer/UISettings" to="." method="set_minimum_exit_distance"]
[connection signal="step_count_changed" from="CanvasLayer/UISettings" to="." method="set_step_count"]
[connection signal="step_time_changed" from="CanvasLayer/UISettings" to="." method="set_step_time"]
[connection signal="wall_chance_changed" from="CanvasLayer/UISettings" to="." method="set_wall_chance"]
[connection signal="wall_conversion_changed" from="CanvasLayer/UISettings" to="." method="set_wall_conversion"]
[connection signal="pressed" from="CanvasLayer/UISettings/ButtonGenerate" to="." method="generate_new_dungeon"]
[connection signal="pressed" from="CanvasLayer/UISettings/ButtonCameraSwitch" to="CanvasLayer/UISettings/ButtonCameraSwitch" method="_on_pressed"]
[connection signal="value_changed" from="CanvasLayer/UISettings/MinimumCavernArea/SliderMinimumCavernArea" to="CanvasLayer/UISettings" method="_on_SliderMinimumCavernArea_value_changed"]
[connection signal="value_changed" from="CanvasLayer/UISettings/MinimumExitDistance/SliderMinimumExitDistance" to="CanvasLayer/UISettings" method="_on_SliderMinimumExitDistance_value_changed"]
[connection signal="value_changed" from="CanvasLayer/UISettings/MaximumTreasure/SliderMaximumTreasure" to="CanvasLayer/UISettings" method="_on_SliderMaximumTreasure_value_changed"]
[connection signal="value_changed" from="CanvasLayer/UISettings/WallChance/SliderWallChance" to="CanvasLayer/UISettings" method="_on_SliderWallChance_value_changed"]
[connection signal="value_changed" from="CanvasLayer/UISettings/WallConversion/SliderWallConversion" to="CanvasLayer/UISettings" method="_on_SliderWallConversion_value_changed"]
[connection signal="value_changed" from="CanvasLayer/UISettings/FloorConversion/SliderFloorConversion" to="CanvasLayer/UISettings" method="_on_SliderFloorConversion_value_changed"]
[connection signal="value_changed" from="CanvasLayer/UISettings/StepCount/SliderStepCount" to="CanvasLayer/UISettings" method="_on_SliderStepCount_value_changed"]
[connection signal="value_changed" from="CanvasLayer/UISettings/StepSpeed/SliderStepSpeed" to="CanvasLayer/UISettings" method="_on_SliderStepSpeed_value_changed"]
